opendingux: gcw0: Add BR2_PACKAGE_BOOST_PROGRAM_OPTIONS
Fixes blockattack.opk startup error (still doesn't work but now for
other reasons).

Signed-off-by: Gleb Mazovetskiy <glex.spb@gmail.com>

--- a/configs/od_gcw0_defconfig
+++ b/configs/od_gcw0_defconfig
@@ -134,6 +134,8 @@ BR2_PACKAGE_FONTCONFIG=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_LIBAIO=y
 BR2_PACKAGE_TSLIB=y
+BR2_PACKAGE_BOOST=y
+BR2_PACKAGE_BOOST_PROGRAM_OPTIONS=y
 BR2_PACKAGE_GLOG=y
 BR2_PACKAGE_C_ARES=y
 BR2_PACKAGE_LIBHTTPPARSER=y
