--- a/board/opendingux/Config.in
+++ b/board/opendingux/Config.in
@@ -1,6 +1,7 @@
 menu "OpenDingux packages"
 
 	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/bennugd/Config.in"
+	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/fluidsynth1/Config.in"
 	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/fonts-droid/Config.in"
 	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/gmenu2x/Config.in"
 	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/libhugetlbfs/Config.in"
