opendingux: gcw0: Enable BR2_PACKAGE_FLUIDSYNTH1
For binary backwards compatibility with existing OPKs, such as PrBoom+

Signed-off-by: Gleb Mazovetskiy <glex.spb@gmail.com>

--- a/configs/od_gcw0_defconfig
+++ b/configs/od_gcw0_defconfig
@@ -116,6 +116,7 @@ BR2_PACKAGE_PYTHON_PYGAME_MIXER_MUSIC=y
 BR2_PACKAGE_PYTHON_URLLIB3=y
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 # BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS is not set
+BR2_PACKAGE_FLUIDSYNTH1=y
 BR2_PACKAGE_LIBID3TAG=y
 BR2_PACKAGE_LIBMAD=y
 BR2_PACKAGE_LIBSNDFILE=y
