--- a/configs/od_gcw0_defconfig
+++ b/configs/od_gcw0_defconfig
@@ -209,6 +209,8 @@ BR2_PACKAGE_LIBOPK=y
 BR2_PACKAGE_LIBPNG14=y
 BR2_PACKAGE_LIBSHAKE=y
 BR2_PACKAGE_LIBXDGMIME=y
+BR2_PACKAGE_COMMANDER=y
+BR2_PACKAGE_COMMANDER_PLATFORM="gcw0"
 BR2_PACKAGE_LOVE2D=y
 BR2_PACKAGE_MININIT=y
 BR2_PACKAGE_OD_PASSWD_CONFIG=y
