--- a/configs/od_lepus_defconfig
+++ b/configs/od_lepus_defconfig
@@ -123,6 +123,8 @@ BR2_TARGET_ROOTFS_SQUASHFS4_ZSTD=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_MKPASSWD=y
 BR2_PACKAGE_BENNUGD=y
+BR2_PACKAGE_COMMANDER=y
+BR2_PACKAGE_COMMANDER_PLATFORM="retrofw"
 BR2_PACKAGE_GMENU2X=y
 BR2_PACKAGE_GMENU2X_SHOW_CLOCK=y
 BR2_PACKAGE_GMENU2X_CPUFREQ=y
