--- a/configs/od_rs90_defconfig
+++ b/configs/od_rs90_defconfig
@@ -119,6 +119,8 @@ BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_MKPASSWD=y
+BR2_PACKAGE_COMMANDER=y
+BR2_PACKAGE_COMMANDER_PLATFORM="rs90"
 BR2_PACKAGE_GMENU2X=y
 BR2_PACKAGE_GMENU2X_CPUFREQ=y
 BR2_PACKAGE_KMSGRAB=y
