--- a/board/opendingux/rs90/linux_defconfig
+++ b/board/opendingux/rs90/linux_defconfig
@@ -7,8 +7,11 @@ CONFIG_NO_HZ_IDLE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT_VOLUNTARY=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_SGETMASK_SYSCALL is not set
 # CONFIG_SYSFS_SYSCALL is not set
+# CONFIG_PRINTK is not set
+# CONFIG_BUG is not set
 # CONFIG_ELF_CORE is not set
 # CONFIG_BASE_FULL is not set
 # CONFIG_TIMERFD is not set
